// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkDialog should render correctly in the given target if renderTarget is supplied 1`] = `null`;

exports[`BpkDialog should render correctly in the given target if renderTarget is supplied 2`] = `
<div>
  <div>
    <div
      class="bpk-scrim-content bpk-modal__container"
    >
      <div
        class="bpk-scrim"
        role="presentation"
      />
      <section
        aria-labelledby="bpk-modal-heading-my-modal"
        class="bpk-modal"
        id="my-modal"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="bpk-modal__content bpk-modal__content--padded"
        >
          <button
            aria-label="Close"
            class="bpk-close-button bpk-dialog__close-button"
            title="Close"
            type="button"
          >
            <svg
              class="bpk-close-button__icon"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 9.172l4.243-4.243a2 2 0 1 1 2.828 2.828L14.828 12l4.243 4.243a2 2 0 1 1-2.828 2.828L12 14.828l-4.243 4.243a2 2 0 1 1-2.828-2.828L9.172 12 4.929 7.757A2 2 0 1 1 7.757 4.93L12 9.172z"
              />
            </svg>
          </button>
          Dialog content inside a custom target
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`BpkDialog should render correctly when it is not dismissible 1`] = `null`;

exports[`BpkDialog should render correctly when it is not dismissible 2`] = `
<div>
  <div>
    <div
      class="bpk-scrim-content bpk-modal__container"
    >
      <div
        class="bpk-scrim"
        role="presentation"
      />
      <section
        aria-labelledby="bpk-modal-heading-my-modal"
        class="bpk-modal"
        id="my-modal"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="bpk-modal__content bpk-modal__content--padded"
        >
          Dialog content inside a custom target
        </div>
      </section>
    </div>
  </div>
</div>
`;
